Perf and evidence: cache mod metadata, bounded log tail, launch settings
Watching a repeat scan open all 200 jars again is what the brief calls a hot path to
avoid, so a scan now reuses metadata keyed on each file's size and write time. The
creation form's persistence step is testable on its own, the log tab is checked
against a 6.8MB file, and a live launch confirms the instance's memory and custom
JVM argument are in the command the game is started with - which also adds a
redacted command preview to the launch result for diagnostics.